Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68403

Multisample textures not supported with GLES (3.1+)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.1
    • 5.11
    • Qt3D
    • None
    • 6d21a80408bb5a258c5bb6e092a5ad451999789a

    Description

      glTexStorage2DMultisample is supported from OpenGL ES 3.1. This would need a graphicshelperes3_1 that handles this and the related things (like sampler2DMS uniforms) appropriately.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-68403
          # Subject Branch Project Status CR V

          Activity

            People

              lagocs Laszlo Agocs
              lagocs Laszlo Agocs
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes