Add a GLES 3.1 graphics helper

...to enable sampler2DMS uniforms.

Also fixes the ES3 helper when it comes to uniformByteSize.

[ChangeLog] 2D samplers for multisample textures are now supported
on OpenGL ES 3.1 and newer

Task-number: QTBUG-68403
Change-Id: Iee1bd8baf097e19d89f651845938c681fb2a4df9
Reviewed-by: Andy Nichols <andy.nichols@qt.io>