src/render/renderers/opengl/graphicshelpers/graphicscontext.cpp
@@ -74,6 +74,7 @@
 #endif
 #include <Qt3DRender/private/graphicshelperes2_p.h>
 #include <Qt3DRender/private/graphicshelperes3_p.h>
+#include <Qt3DRender/private/graphicshelperes3_1_p.h>
 #include <Qt3DRender/private/graphicshelperes3_2_p.h>
 
 #include <QSurface>
@@ -343,6 +344,9 @@ GraphicsHelperInterface *GraphicsContext::resolveHighestOpenGLFunctions()
             if (m_gl->format().minorVersion() >= 2) {
                 glHelper = new GraphicsHelperES3_2;
                 qCDebug(Backend) << Q_FUNC_INFO << " Building OpenGL ES 3.2 Helper";
+            } else if (m_gl->format().minorVersion() >= 1) {
+                glHelper = new GraphicsHelperES3_1;
+                qCDebug(Backend) << Q_FUNC_INFO << " Building OpenGL ES 3.1 Helper";
             } else {
                 glHelper = new GraphicsHelperES3();
                 qCDebug(Backend) << Q_FUNC_INFO << " Building OpenGL ES 3.0 Helper";
