src/render/renderers/opengl/graphicshelpers/graphicshelperes3.cpp
@@ -328,6 +328,109 @@ UniformType GraphicsHelperES3::uniformTypeFromGLType(GLenum glType)
     }
 }
 
+uint GraphicsHelperES3::uniformByteSize(const ShaderUniform &description)
+{
+    uint rawByteSize = 0;
+    int arrayStride = qMax(description.m_arrayStride, 0);
+    int matrixStride = qMax(description.m_matrixStride, 0);
+
+    switch (description.m_type) {
+
+    case GL_FLOAT_VEC2:
+    case GL_INT_VEC2:
+    case GL_UNSIGNED_INT_VEC2:
+        rawByteSize = 8;
+        break;
+
+    case GL_FLOAT_VEC3:
+    case GL_INT_VEC3:
+    case GL_UNSIGNED_INT_VEC3:
+        rawByteSize = 12;
+        break;
+
+    case GL_FLOAT_VEC4:
+    case GL_INT_VEC4:
+    case GL_UNSIGNED_INT_VEC4:
+        rawByteSize = 16;
+        break;
+
+    case GL_FLOAT_MAT2:
+        rawByteSize = matrixStride ? 2 * matrixStride : 16;
+        break;
+
+    case GL_FLOAT_MAT2x4:
+        rawByteSize = matrixStride ? 2 * matrixStride : 32;
+        break;
+
+    case GL_FLOAT_MAT4x2:
+        rawByteSize = matrixStride ? 4 * matrixStride : 32;
+        break;
+
+    case GL_FLOAT_MAT3:
+        rawByteSize = matrixStride ? 3 * matrixStride : 36;
+        break;
+
+    case GL_FLOAT_MAT2x3:
+        rawByteSize = matrixStride ? 2 * matrixStride : 24;
+        break;
+
+    case GL_FLOAT_MAT3x2:
+        rawByteSize = matrixStride ? 3 * matrixStride : 24;
+        break;
+
+    case GL_FLOAT_MAT4:
+        rawByteSize = matrixStride ? 4 * matrixStride : 64;
+        break;
+
+    case GL_FLOAT_MAT4x3:
+        rawByteSize = matrixStride ? 4 * matrixStride : 48;
+        break;
+
+    case GL_FLOAT_MAT3x4:
+        rawByteSize = matrixStride ? 3 * matrixStride : 48;
+        break;
+
+    case GL_BOOL:
+        rawByteSize = 1;
+        break;
+
+    case GL_BOOL_VEC2:
+        rawByteSize = 2;
+        break;
+
+    case GL_BOOL_VEC3:
+        rawByteSize = 3;
+        break;
+
+    case GL_BOOL_VEC4:
+        rawByteSize = 4;
+        break;
+
+    case GL_INT:
+    case GL_FLOAT:
+    case GL_UNSIGNED_INT:
+    case GL_SAMPLER_2D:
+    case GL_SAMPLER_3D:
+    case GL_SAMPLER_CUBE:
+    case GL_INT_SAMPLER_2D:
+    case GL_INT_SAMPLER_3D:
+    case GL_INT_SAMPLER_CUBE:
+    case GL_UNSIGNED_INT_SAMPLER_2D:
+    case GL_UNSIGNED_INT_SAMPLER_3D:
+    case GL_UNSIGNED_INT_SAMPLER_CUBE:
+    case GL_SAMPLER_2D_SHADOW:
+    case GL_SAMPLER_CUBE_SHADOW:
+    case GL_SAMPLER_2D_ARRAY:
+    case GL_INT_SAMPLER_2D_ARRAY:
+    case GL_UNSIGNED_INT_SAMPLER_2D_ARRAY:
+    case GL_SAMPLER_2D_ARRAY_SHADOW:
+        rawByteSize = 4;
+        break;
+    }
+
+    return arrayStride ? rawByteSize * arrayStride : rawByteSize;
+}
+
 void GraphicsHelperES3::blitFramebuffer(GLint srcX0, GLint srcY0, GLint srcX1, GLint srcY1, GLint dstX0, GLint dstY0, GLint dstX1, GLint dstY1, GLbitfield mask, GLenum filter)
 {
     m_extraFuncs->glBlitFramebuffer(srcX0, srcY0, srcX1, srcY1, dstX0, dstY0, dstX1, dstY1, mask, filter);
