src/render/renderers/opengl/graphicshelpers/graphicshelpers.pri
@@ -7,6 +7,7 @@ HEADERS += \
     $$PWD/graphicshelperinterface_p.h \
     $$PWD/graphicshelperes2_p.h \
     $$PWD/graphicshelperes3_p.h \
+    $$PWD/graphicshelperes3_1_p.h \
     $$PWD/graphicshelperes3_2_p.h \
     $$PWD/graphicshelpergl2_p.h \
     $$PWD/graphicshelpergl3_3_p.h \
@@ -18,6 +19,7 @@ SOURCES += \
     $$PWD/graphicscontext.cpp \
     $$PWD/graphicshelperes2.cpp \
     $$PWD/graphicshelperes3.cpp \
+    $$PWD/graphicshelperes3_1.cpp \
     $$PWD/graphicshelperes3_2.cpp \
     $$PWD/graphicshelpergl2.cpp \
     $$PWD/graphicshelpergl3_3.cpp \
